# momiji-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  log.txt
migrations/2018-06-04-144510_create_guilds/: down.sql  up.sql
migrations/2018-06-04-185657_create_users/: up.sql
migrations/2018-06-04-193138_create_notes/: up.sql
migrations/2018-06-04-200213_create_roles/: up.sql
migrations/2018-06-06-182436_create_timers/: down.sql  up.sql
migrations/2018-06-06-183246_create_cases/: down.sql  up.sql
migrations/2018-07-10-001822_create_tags/: up.sql
migrations/2018-07-22-204830_create_premium/: down.sql  up.sql
migrations/2018-08-05-215157_create_hackbans/: down.sql  up.sql
migrations/2021-06-16-075138_update_guilds_for_premium/: down.sql  up.sql
src/: client.rs  lib.rs  macros.rs  main.rs  momiji_client.rs  standard_framework.rs  utils.rs
src/commands/: mod.rs
src/commands/admins/: config.rs  ignore.rs  management.rs  mod.rs  premium.rs  register_control.rs  roles.rs  tests.rs
src/commands/general/: misc.rs  mod.rs  roles.rs  tags.rs
src/commands/mods/: info.rs  mod.rs  mute.rs  notes.rs  roles.rs  watchlist.rs
src/commands/owner/: cache.rs  db.rs  log.rs  mod.rs  premium.rs
src/core/: api.rs  colours.rs  consts.rs  framework.rs  handler.rs  mod.rs  model.rs  timers.rs  timers_new.rs  utils.rs
src/db/: mod.rs  models.rs  schema.rs
src/framework/: args.rs  command.rs  config.rs  db.rs  mod.rs  parser.rs
src/framework/command/: mod.rs
src/modules/: api.rs  commands.rs  mod.rs
src/modules/commands/: admins.rs  everyone.rs  mod.rs  moderators.rs  owners.rs
src/modules/commands/admins/: config.rs  ignore.rs  management.rs  mod.rs  premium.rs  roles.rs  tests.rs
src/modules/commands/general/: misc.rs  mod.rs  nsfw.rs  roles.rs  tags.rs
src/modules/commands/mods/: bans.rs  hackbans.rs  info.rs  kickbans.rs  mod.rs  mute.rs  notes.rs  roles.rs  watchlist.rs
src/modules/commands/owners/: log.rs  mod.rs  premium.rs
src/momiji/framework/: mod.rs
src/momiji/framework/command/: mod.rs
src/preload/: api.rs  framework.rs  handler.rs  mod.rs  model.rs
