[package]
name = "momiji"
version = "0.1.0"
authors = ["Mishio595 <tenseiken595@gmail.com>"]
license = "MIT AND ISC"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
kankyo = "0.2.0"
log = "0.4"
pretty_env_logger = "0.2"
threadpool = "1.7"
futures = "0.1"
chrono = "0.4"
typemap = "0.3"
sysinfo = "0.5"
sys-info = "*"
rand = "0.5.2"
regex = "*"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.0.1"
levenshtein = "1.0.3"
fuzzy_match = "0.1.1"

[dependencies.diesel]
version = "1.0.0"
features = ["postgres", "chrono"]

[dependencies.serenity]
#git = "https://github.com/Mishio595/serenity.git"
path = "/home/lynn/builds/serenity"
features = ["builder", "client", "cache", "framework", "standard_framework", "gateway", "http", "model", "utils", "voice"]
