[package]
name = "momiji"
version = "1.3.0"
authors = ["Mishio595 <tenseiken595@gmail.com>"]
license = "MIT AND ISC"
repository = "https://gitlab.com/Mishio595/momiji-rust"
readme = "./README.md"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
chrono = "0.4"
forecast = "1.1.0"
fuzzy_match = "0.1.1"
geocoding = "0.0.3"
kankyo = "0.2.0"
kitsu = "0.2.0"
lazy_static = "1.0.1"
levenshtein = "1.0.3"
log = "0.4"
rand = "0.5.2"
regex = "*"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sys-info = "*"
sysinfo = "0.5"
threadpool = "1.7"
typemap = "0.3"
urbandictionary = "0.3"

[dependencies.parking_lot]
version = "0.6"
features = ["deadlock_detection"]

[dependencies.diesel]
version = "1.0.0"
features = ["postgres", "chrono", "r2d2"]

[dependencies.fern]
version = "0.5"
features = ["colored"]

[dependencies.serenity]
git = "https://github.com/Mishio595/serenity.git"
#path = "/home/lynn/builds/serenity"
default-features = false
features = ["builder", "client", "cache", "framework", "standard_framework", "gateway", "http", "model", "utils"]

[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }
