[package]
name = "momiji"
version = "3.0.0"
authors = ["Adelyn Breedlove <tenseiken595@gmail.com>"]
license = "MIT"
repository = "https://gitlab.com/Mishio595/momiji-rust"
readme = "./README.md"
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
fuzzy_match = "0.2.1"
lazy_static = "1.4.0"
levenshtein = "1.0.5"
parking_lot = "0.11.1"
peg = "0.7"
rand = "0.8.4"
regex = "1.5.3"
tracing = "0.1.26"
tracing-subscriber = "0.2.0"
twilight-cache-inmemory = "0.4"
twilight-embed-builder = "0.4"
twilight-gateway = "0.4"
twilight-http = "0.4"
twilight-mention = "0.4"
twilight-model = "0.4"
twilight-standby = "0.4"
twilight-util = "0.4"

[dependencies.diesel]
version = "1.4"
features = ["postgres", "chrono", "r2d2"]

[dependencies.tokio]
version = "1.6"
features = ["rt-multi-thread", "macros"]